# mh-cvbot-pc

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.org
cmake/: create_external_easybot.cmake
doc/: accounts.org  note.org
doc/ui/: mhtool.sketch
include/: pch.h
include/mh/: cv.h
include/mh-tool/: mh_cons.h  mm.h  util.h  util_qt.h  util_window.h
include/mh-tool/mh/: mh.h  mh_path.h
include/mh-tool/module/cv/: cv_img.h
include/mh-tool/module/runtime/: runtime.h
include/mh-tool/robot/: mhtab_robot.h  robot.h
include/mh-tool/util/: util.h  util_string.h
include/mh/cv/: img.h
include/mh/modal/: pos.h
include/mhtool/: config.h  cv.h  mh.h  scene.h
include/mhtool/account/: account.h  role.h
include/mhtool/comm/: Result.h  config.h  cv.h  land_mark.h  log.h  pos.h  pos_color.h  pos_colors.h
include/mhtool/comm/cv/: cv.h  cv_pos_indicator.h
include/mhtool/comm/mh/: mh.h
include/mhtool/comm/modal/: img.h  pos_indicator.h
include/mhtool/comm/module/: land_mark.h
include/mhtool/comm/module/mh/: mh.h
include/mhtool/comm/module/mh/game_scene/: game_scene.h
include/mhtool/comm/module/modal/: img.h
include/mhtool/comm/module/pos_indicator/: pos_indicator.h  pos_indicator_state.h
include/mhtool/comm/pos_indicator/: pos_indicator_landmark.h  pos_indicator_state.h
include/mhtool/core/: pos_color.h  pos_colors.h
include/mhtool/core/cv/: game_pos_cv.h  game_state_cv.h  ich.h
include/mhtool/core/pos_color/: pos_colors.h
include/mhtool/core/static_region/: sr_12_plus.h
include/mhtool/cv/: cv.h  cv_little_map.h  cv_pos_indicator.h  cv_util.h
include/mhtool/mh/: BaotuTaskInfo.h  data.h  mh.h  mh_main_loop.h  pos_indicator.h  send_point.h
include/mhtool/mh/city/: building.h  changan.h  city.h  npc.h  taoyuancun.h
include/mhtool/mh/city/changan/: chang_an.h  changan.h  jiudian.h
include/mhtool/mh/game_scene/: game_scene.h  teleportation_npc.h  teleportation_point.h
include/mhtool/mh/game_scene/city/: changan.h  city.h
include/mhtool/mh/npc/: npc.h
include/mhtool/mh/task/: ITask.h  baotu_task.cpp  baotu_task.h
include/mhtool/model/: game_pos.h
include/mhtool/module/: entry.h  pos_colors.h
include/mhtool/module/cv/: cv.h  cv_img.h
include/mhtool/module/mh/: mh_window.h
include/mhtool/module/mh/game_scene/: city.h
include/mhtool/robot/: mhmain_robot.h
include/mhtool/task/: baotu_task.h  go_city_task.cpp  go_city_task.h  sequence_task.h  task.h
include/mhtool/util/: cv_util.h  util.h  util_qt.h  util_window.h
src/: App.cc  CMakeLists.txt  cv.cc  main.cc  mm.cc  pch.cc
src/action/: action.cc  action_start_mm.cc  action_start_mm.h
src/app/: App.cc  App.h
src/comm/: cv.cc  log.cpp  pos_color.cc  pos_colors.cc  result.cpp
src/comm/cv/: cv.cc  pos_indicator_land_mark.cc  pos_indicator_land_mark.h
src/comm/module/comm/util/: util.cc  util_qt.cc  util_string.cc  util_window.cc
src/comm/module/cv/: cv.cc
src/comm/module/mh/: mh.cc  mh_path.cc  mh_window.cc
src/comm/module/robot/: robot.cc
src/comm/module/runtime/: runtime.cc
src/comm/pos_indicator/: cc_pos_indicator.cc  pos_indcator.cpp  pos_indicator_land_mark.cc  pos_indicator_land_mark.h
src/component/preview/: preview_window.cc  preview_window.h
src/core/cv/: game_pos_cv.cc  game_state_cv.cc
src/core/pos_color/: pos_color.cc  pos_colors.cc
src/core/static_region/: sr_12_plus.cc  static_region.cc  static_region.h
src/cv/: cv.cc  cv_util.cpp
src/gui/: main_gui.cc
src/mh/: config.cc  cv.cc  data.cc  mh.cc  mh_main_loop.cpp  mh_path.cc  mh_window.cc  scene.cc  scene.h
src/mh/city/: ChangAn.cpp  building.cpp  chang_an.cpp  npc.cpp
src/mh/game_scene/: city.cc  game_scene.cc
src/mh/task/: baotu_task.cpp  go_city_task.cpp  go_city_task.h  sequence_task.cpp  task.cpp
src/module/action/: action.h
src/module/comm/util/: util.cc  util_qt.cc  util_string.cc  util_window.cc
src/module/cv/: cv.cc  cv.h
src/module/mh/: mh.cc  mh_path.cc  mh_window.cc
src/module/mm/: mh.cc  mh_path.cc
src/module/robot/: robot.cc
src/module/runtime/: runtime.cc
src/preview/: preview_config.h  preview_ui.cc  preview_ui.h
src/preview/core/: preview_thread.cc  preview_thread.h
src/task/: baotu_task.cpp
src/ui/: App.cc  App.h
src/ui/component/log/: log_view.cc  log_view.h
src/ui/component/preview/: preview_window.h
src/util/: util_qt.cc  util_window.cc
test/: CMakeLists.txt  config.yaml  cv_info.cc  cv_info.h  hello_test.cc  test_cv.cc  test_mm.cc
ui-design/: mhtool.sketch
wiki/: show-cv-mat-in-qt.org
